Add pizza picture

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,5 +7,6 @@
     
         <body>
             <h1>Pizza Recipe</h1>
+            <img src="images/stone_oven_pizza.jpeg" alt="stone oven pizza">
         </body>
     </html>
