--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,19 @@
         <body>
             <h1>Pizza Recipe</h1>
             <img src="images/stone_oven_pizza.jpeg" alt="stone oven pizza">
+            <h2>Recipe Description</h2>
+            <p>Paragraph about recipe.</p>
+            <h3>Ingredients</h3>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            <h3>Steps</h3>
+                <ol>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
         </body>
     </html>
