--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
     
         <body>
             <h1>Pizza Recipe</h1>
-            <img src="images/stone_oven_pizza.jpeg" alt="stone oven pizza">
+            <img src="images/stone_oven_pizza.jpg" alt="stone oven pizza">
             <h2>Recipe Description</h2>
             <p>Paragraph about recipe.</p>
             <h3>Ingredients</h3>
@@ -20,7 +20,7 @@
                 <ol>
                     <li></li>
                     <li></li>
-                    <li></li>
+                    <li></li>   
                 </ol>
         </body>
     </html>
