--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
     
         <body>
             <h1>Pizza Recipe</h1>
-            <img src="images/stone_oven_pizza.jpg" alt="stone oven pizza">
+            <img src="../images/Screen Shot 2023-01-13 at 3.09.07 AM.png" alt="pizza" width="400">
             <h2>Recipe Description</h2>
             <p>Paragraph about recipe.</p>
             <h3>Ingredients</h3>
