--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
         <body>
             <h1>Odin Recipes</h1>
             <a href="recipes/pizza.html">Pizza Recipe</a>
+            <a href="recipes/pasta.html">Pasta Recipe</a>
+            <a href="recipes/tacos.html">Taco Recipe</a>
+            <a href="recipes/salad.html">Salad Recipe</a>
         </body>
+
     </html>
