--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
         <body>
             <h1>Odin Recipes</h1>
-            <a href="recipes/pizza.html">Pizza Recipe</a>
-            <a href="recipes/pasta.html">Pasta Recipe</a>
-            <a href="recipes/tacos.html">Taco Recipe</a>
-            <a href="recipes/salad.html">Salad Recipe</a>
+            <ol>
+                <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+                <li><a href="recipes/pasta.html">Pasta Recipe</a></li>
+                <li><a href="recipes/tacos.html">Taco Recipe</a></li>
+                <li><a href="recipes/salad.html">Salad Recipe</a></li>
+            </ol>
         </body>
 
     </html>
