--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -7,7 +7,7 @@
     
         <body>
             <h1>Salad Recipe</h1>
-            <img src="../images" alt="" width="400">
+            <a href="https://placeholder.com"><img src="https://via.placeholder.com/150" alt=""></a>
             <h2>Recipe Description</h2>
             <p>Paragraph about recipe.</p>
             <h3>Ingredients</h3>
