--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -7,7 +7,7 @@
     
         <body>
             <h1>Salad Recipe</h1>
-            <img src="https://via.placeholder.com/150.gif?text=salad/09f" alt="">
+            <img src="https://via.placeholder.com/150.gif/00CCFF/00FFFF/?text=salad" alt="">
             <h2>Recipe Description</h2>
             <p>Paragraph about recipe.</p>
             <h3>Ingredients</h3>
