--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -12,15 +12,15 @@
             <p>Paragraph about recipe.</p>
             <h3>Ingredients</h3>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Lettuce</li>
+                    <li>Cherry Tomato</li>
+                    <li>Cucumber</li>
                 </ul>
             <h3>Steps</h3>
                 <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>   
+                    <li>Tear lettuce by hand</li>
+                    <li>Chop cucumber and tomato</li>
+                    <li>Mix everything together</li>   
                 </ol>
         </body>
     </html>
