--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,7 +7,7 @@
     
         <body>
             <h1>Pasta Recipe</h1>
-            <img src="../images" alt="" width="400">
+            <img src="https://via.placeholder.com/200/FFFFCC/990000/?text=pasta" alt="" width="400">
             <h2>Recipe Description</h2>
             <p>Paragraph about recipe.</p>
             <h3>Ingredients</h3>
